@@ -142,6 +142,7 @@ namespace libtorrent
 #else
 #define MAYBE_ASIO_DEBUGGING
 #endif
+
 #define CASE(t) case socket_type_int_impl<ssl_stream<t> >::value: \
 	MAYBE_ASIO_DEBUGGING \
 	s.get<ssl_stream<t> >()->async_shutdown(boost::bind(&on_close_socket, &s, holder)); \
